--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -126,7 +126,8 @@
             android:id="@+id/username"
             android:background="@drawable/ic_rectangle_1"
             android:padding="10dp"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:drawableEnd="@drawable/email_icon"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -148,7 +149,9 @@
             android:hint="Password"
             android:textColorHint="@color/textInputEditTextHintColor"
             app:hintAnimationEnabled="true"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername">
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@android:color/white">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password"
@@ -185,7 +188,7 @@
         android:gravity="center"
         android:text="Sign up with email here>"
         android:textColor="#1695DD"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
