--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -96,7 +96,8 @@
             android:background="@drawable/ic_rectangle_1"
             android:padding="10dp"
             android:inputType="textEmailAddress"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white"
+            android:drawableEnd="@drawable/email_icon"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -107,7 +108,9 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
         android:textColorHint="@color/textInputEditTextHintColor"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
+        android:layout_marginEnd="20dp"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@android:color/white">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
@@ -129,7 +132,9 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
         android:textColorHint="@color/textInputEditTextHintColor"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp">
+        android:layout_marginEnd="20dp"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@android:color/white">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/confirm_password"
