--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,23 +8,28 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.example.moviestreamingnew.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_navigation_home_to_navigation_find"
             app:destination="@id/navigation_find" />
+        <action
+            android:id="@+id/action_navigation_home_to_description_fragment"
+            app:destination="@id/description_fragment" />
     </fragment>
 
     <fragment
         android:id="@+id/navigation_find"
         android:name="com.example.moviestreamingnew.ui.find.FindFragment"
-        android:label="@string/title_find"
         tools:layout="@layout/fragment_find" />
 
     <fragment
         android:id="@+id/navigation_downloads"
         android:name="com.example.moviestreamingnew.ui.profile.ProfileFragment"
-        android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/description_fragment"
+        android:name="com.example.moviestreamingnew.ui.description.DescriptionFragment"
+        tools:layout="@layout/fragment_description"/>
 
 </navigation>
